# rogue-llm

./: .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  IMPLEMENTATION_NOTES.md  LICENSE  Makefile  PROJECT_SPEC.md  README.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/scripts/: build_pr_risk_comment.py
.github/workflows/: ci.yml  pr-risk-comment.yml
attacks/: category_descriptions.yaml
attacks/seeds/: LLM01_prompt_injection.yaml  LLM02_sensitive_disclosure.yaml  LLM03_supply_chain.yaml  LLM04_data_model_poisoning.yaml  LLM05_improper_output_handling.yaml  LLM06_excessive_agency.yaml  LLM07_system_prompt_leakage.yaml  LLM08_vector_embedding.yaml  LLM09_misinformation.yaml  LLM10_unbounded_consumption.yaml
attacks/v1/: dataset.jsonl  generation_report.md  metadata.json
attacks/v1/checkpoints/: LLM01.jsonl  LLM02.jsonl  LLM03.jsonl  LLM04.jsonl  LLM05.jsonl  LLM06.jsonl  LLM07.jsonl  LLM08.jsonl  LLM09.jsonl  LLM10.jsonl
data/eval/: baseline_qa.jsonl  review_log.md
docs/: index.html
results/: baseline_ragas.json
results/baseline/: risk_report.json
src/: config.py
src/attack_generation/: canary_run.py  llm08_module.py  mutator.py  quality_filter.py
src/evaluation/: baseline.py  cli.py  config.py  cross_validator.py  engine.py  metric_suite.py  scorer.py
src/evaluation/metrics/: faithfulness.py  hallucination.py  injection_detector.py  pii_detector.py  refusal_classifier.py  response_patterns.py  system_prompt_leak.py
src/guardrails/: __init__.py  cli.py  delta.py  guardrail_target.py  input_sanitizer.py  output_filter.py  policy.yaml  reasons.py  residual_analysis.py  safety_classifier.py
src/pipeline/: attack_runner.py  cache.py  groq_client.py  llm08_executor.py  rate_limiter.py  retry.py
src/reporting/: __init__.py  cli.py  delta_visualizer.py  html_renderer.py  report_builder.py  schema_v1.md
src/reporting/templates/: report.html.j2
src/target_system/: conversation.py  data_loader.py  models.py  prompts.py  rag_chatbot.py
tests/: conftest.py
tests/fixtures/sample_phase_artifacts/: cross_validation.json  guarded_results.jsonl  guarded_risk_scores.json  guarded_scores.jsonl  guardrail_decisions.jsonl  residual_analysis.json  unguarded_risk_scores.json
tests/integration/: test_guardrail_e2e.py  test_rag_chatbot.py  test_runner_e2e.py
tests/unit/: reporting_fixture_paths.py  test_attack_runner.py  test_attack_runner_cli.py  test_baseline.py  test_cache.py  test_cli_imports_without_env.py  test_cross_validator.py  test_data_loader.py  test_delta_visualizer.py  test_evaluation_cli.py  test_evaluation_engine.py  test_faithfulness.py  test_groq_client.py  test_guardrail_target.py  test_guardrails_cli.py  test_hallucination.py  test_html_renderer.py  test_injection_detector.py  test_input_sanitizer.py  test_llm08_executor.py  test_llm08_module.py  test_mutator.py  test_output_filter.py  test_pii_detector.py  test_quality_filter.py  test_rag_chatbot.py  test_rate_limiter.py  test_refusal_classifier.py  test_report_builder.py  test_reporting_cli.py  test_residual_analysis.py  test_response_patterns.py  test_retry.py  test_safety_classifier.py  test_scorer.py  test_smoke.py  test_system_prompt_leak.py
tests/unit/fixtures/: nvd_cves.jsonl  owasp_sample.md
